# cuda_test

./: .gitignore  CMakeLists.txt  main.cpp  run.sh
cmake/: gflags.cmake  googletest.cmake
scripts/attention/: attn_demo.py
src/: jitify.hpp  utils.cuh  utils.h
src/compile/: assembly.cu  test.cu
src/compile/separate/: x.cu  y.cu  z.cpp
src/cutlass/: copy_test.cu  demo.cu  gemm-multi-stage.cu  layout.cu  simple_gemm.cu  tensor.cu  vector_add.cu
src/cutlass/cute/: copy.cu  iden.cu  identity.cu  layout.cu  swizzle.cu  tile_to_shape.cu
src/exercise/: global_var.cu  managed.cu  memcpy.cu  read_offset.cu  unroll.cu  warp_funcs.cu  zero_copy.cu
src/exercise/driver/: vector_add.cpp  vector_add_kernel.cu
src/exercise/nvrtc/: headerB.h  header_test.cu  lowered_names.cu  saxpy.cu  template.cu
src/exercise/nvrtc/jitify/: consts.cu  jitify_header.cu  log.cc  simple.cu
src/exercise/nvrtc/jitify/jit_header/: my_header1.cuh  my_header2.cuh  my_header3.cuh
src/exercise/tensor_core/: ld.cu
src/hopper/: gemm_pipe.cu  tma.cu
src/op/: reduce.cu
src/op/attention/: attention_api.cuh  attention_bench.cu  attention_utils.cuh  attention_v0.cu  attention_v1.cu  attention_v1_config.cuh  attention_v2.cu  attention_v2_config.cuh
src/optimization/: vec_add.cuh
src/optimization/float4/: float4.cuh  float4_bench.cu  float4_jit.cuh
src/optimization/gemm/: block.cu  hgemm_bench.cu  hgemm_tc_v0.cuh  naive.cuh  sgemm.cuh  sgemm_bench.cu  sgemm_buffer.cuh  sgemm_cublas.cuh  sgemm_macro_buffer.cuh  sgemm_macro_micro_buffer.cuh  sgemm_macro_micro_bufferV2.cuh  sgemm_micro_buffer.cuh  sgemm_micro_bufferV2.cuh  sgemm_reg_buffer.cuh  sgemm_v1.cuh  sgemm_v3.cuh  warp_product.cu
src/sass/: float_test.cu  warp.cu
src/torch_lab/: CMakeLists.txt  main.cpp
src/torch_lab/custom_op/: CMakeLists.txt
src/utils/: NpyArray.cpp  NpyArray.hpp  cute_smem_utils.cuh  cute_utils.cuh  data_utils.h  float_utils.h  macros.h  print_utils.h  statistics_utils.h  utils.cuh  utils.h
